tests/errors/empty-expect-list.spcasmtest
; The current grammar will make the expected token list for this syntax error empty.
endmacro:
	nop
